--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">MP_app</string>
 
+    <string name="google_translate_api_key">YOUR_API_KEY_HERE</string>
     <string name="addAniv">기념일 추가하기</string>
     <string name="signUp">우리들의 이야기 시작하기</string>
     <string name="signIn">이미 아이디가 있으신가요?</string>
